--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "svelte": "^5.2.12",
     "tailwindcss": "3.4.0",
     "typescript": "^5.7.2"
   }
