--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.13",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwindcss": "3.4.0",
     "typescript": "^5.7.2"
   }
