--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zustand": "5.0.2"
   }
 }
